--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         with_mpi: ['','--with-mpi']
         enable_quad_precision: ['', '--enable-quad-precision']
+        python-version: ["3.10"]
     container:
       image: noaagfdl/fre-nctools-base:2.0.0-focal
       env:
@@ -21,6 +22,14 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+    - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install xarray
     - name: Configure
       run: |
         mkdir build && cd build
