--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         submodules: recursive
     - name: Configure
       run: |
+        python -m pip install --upgrade pip
+        pip install xarray
         mkdir build && cd build
         autoreconf -i ../configure.ac
         ../configure $MPI $QUAD_P
