--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.7
     - name: Configure
       run: |
         python -m pip install --upgrade pip
